# vptry-facelandmarkview

./: .gitignore  BUGFIX_SCIPY_PROCRUSTES.md  IMPLEMENTATION_SUMMARY.md  README.md  SCIPY_PROCRUSTES_SOLUTION.md  STATE_MANAGEMENT_ANALYSIS.md  UI_CHANGES.md  demo_visualization.py  facelandmarkview.py  generate_sample_data.py  pyproject.toml  requirements.txt  test_alignment.py  test_alignment_integration.py  test_alignment_ui.py  test_app.py  test_functionality.py  test_imports.py  test_layout.py
.github/agents/: coding-guidelines.md
src/vptry_facelandmarkview/: __init__.py  constants.py  gl_widget.py  histogram_widget.py  landmark_selector_dialog.py  main.py  projection_widget.py  utils.py  viewer.py
src/vptry_facelandmarkview/alignments/: __init__.py  anatomic0.py  default.py  scipy_procrustes.py
tests/: demo_alignment_methods.py  demo_histogram.py  demo_histogram_final.py  demo_histogram_rounded.py  demo_histogram_updated.py  test_alignment_integration.py  test_alignment_methods.py  test_alignment_ui.py  test_anatomic0_alignment.py  test_app.py  test_functionality.py  test_histogram_logic.py  test_histogram_widget.py  test_imports.py  test_landmark_selector.py  test_landmark_selector_integration.py  test_layout.py  test_projections.py  test_ui_integration.py  visual_test_histogram.py
